// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventCard
    active={false}
    event={
        Object {
            "blockCardText": "foo",
            "datesAndTimes": Array [
              Object {
                "Date": "foo",
                "Time": "foo",
                "uuid": "foo",
              },
            ],
            "eventType": "foo",
            "id": "foo",
            "image": "foo",
            "locationTitle": "foo",
            "title": "foo",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="col-12 md-col-6"
          style={
                    Object {
                              "background": "url(foo?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                              "backgroundSize": "cover",
                            }
          }
/>,
        <div
          className="col-12 md-col-6 flex flex-column justify-between"
>
          <div>
                    <p
                              className="mb2"
                    >
<<<<<<< HEAD
                              Invalid date, undefined at foo
=======
                              Invalid date, foo: at foo
>>>>>>> Add EventDetailHero text
                    </p>
                    <h2
                              className=""
                    >
                              foo
                    </h2>
                    <p
                              className="mt1 mb3"
                              dangerouslySetInnerHTML={
                                        Object {
                                                  "__html": "<p>foo</p>
                                        ",
                                                }
                              }
                    />
          </div>
          <div>
                    <Button
                              className="inline-flex"
                              color="peach"
                              disabled={false}
                              fullWidth={false}
                              hover="shadow"
                              label="RSVP"
                              onClick={[Function]}
                              shadow={false}
<<<<<<< HEAD
                              to="/events/undefined"
=======
                              to="/events/foo"
>>>>>>> Add EventDetailHero text
                              type="button"
                              variant="primary"
                    />
          </div>
</div>,
      ],
      "className": "transition-slide-up-large bg-white mb3 flex col-12 md-col-7",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "col-12 md-col-6",
          "style": Object {
            "background": "url(foo?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
            "backgroundSize": "cover",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              <p
                            className="mb2"
              >
<<<<<<< HEAD
                            Invalid date, undefined at foo
=======
                            Invalid date, foo: at foo
>>>>>>> Add EventDetailHero text
              </p>
              <h2
                            className=""
              >
                            foo
              </h2>
              <p
                            className="mt1 mb3"
                            dangerouslySetInnerHTML={
                                          Object {
                                                        "__html": "<p>foo</p>
                                          ",
                                                      }
                            }
              />
</div>,
            <div>
              <Button
                            className="inline-flex"
                            color="peach"
                            disabled={false}
                            fullWidth={false}
                            hover="shadow"
                            label="RSVP"
                            onClick={[Function]}
                            shadow={false}
<<<<<<< HEAD
                            to="/events/undefined"
=======
                            to="/events/foo"
>>>>>>> Add EventDetailHero text
                            type="button"
                            variant="primary"
              />
</div>,
          ],
          "className": "col-12 md-col-6 flex flex-column justify-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="mb2"
>
<<<<<<< HEAD
                  Invalid date, undefined at foo
=======
                  Invalid date, foo: at foo
>>>>>>> Add EventDetailHero text
</p>,
                <h2
                  className=""
>
                  foo
</h2>,
                null,
                <p
                  className="mt1 mb3"
                  dangerouslySetInnerHTML={
                                    Object {
                                                      "__html": "<p>foo</p>
                                    ",
                                                    }
                  }
/>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
<<<<<<< HEAD
                  "children": "Invalid date, undefined at foo",
                  "className": "mb2",
                },
                "ref": null,
                "rendered": "Invalid date, undefined at foo",
=======
                  "children": "Invalid date, foo: at foo",
                  "className": "mb2",
                },
                "ref": null,
                "rendered": "Invalid date, foo: at foo",
>>>>>>> Add EventDetailHero text
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "foo",
                  "className": "",
                },
                "ref": null,
                "rendered": "foo",
                "type": "h2",
              },
              null,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "mt1 mb3",
                  "dangerouslySetInnerHTML": Object {
                    "__html": "<p>foo</p>
",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "p",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Button
                className="inline-flex"
                color="peach"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label="RSVP"
                onClick={[Function]}
                shadow={false}
<<<<<<< HEAD
                to="/events/undefined"
=======
                to="/events/foo"
>>>>>>> Add EventDetailHero text
                type="button"
                variant="primary"
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "inline-flex",
                "color": "peach",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "RSVP",
                "onClick": [Function],
                "shadow": false,
<<<<<<< HEAD
                "to": "/events/undefined",
=======
                "to": "/events/foo",
>>>>>>> Add EventDetailHero text
                "type": "button",
                "variant": "primary",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-12 md-col-6"
            style={
                        Object {
                                    "background": "url(foo?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                                    "backgroundSize": "cover",
                                  }
            }
/>,
          <div
            className="col-12 md-col-6 flex flex-column justify-between"
>
            <div>
                        <p
                                    className="mb2"
                        >
<<<<<<< HEAD
                                    Invalid date, undefined at foo
=======
                                    Invalid date, foo: at foo
>>>>>>> Add EventDetailHero text
                        </p>
                        <h2
                                    className=""
                        >
                                    foo
                        </h2>
                        <p
                                    className="mt1 mb3"
                                    dangerouslySetInnerHTML={
                                                Object {
                                                            "__html": "<p>foo</p>
                                                ",
                                                          }
                                    }
                        />
            </div>
            <div>
                        <Button
                                    className="inline-flex"
                                    color="peach"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="RSVP"
                                    onClick={[Function]}
                                    shadow={false}
<<<<<<< HEAD
                                    to="/events/undefined"
=======
                                    to="/events/foo"
>>>>>>> Add EventDetailHero text
                                    type="button"
                                    variant="primary"
                        />
            </div>
</div>,
        ],
        "className": "transition-slide-up-large bg-white mb3 flex col-12 md-col-7",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "col-12 md-col-6",
            "style": Object {
              "background": "url(foo?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
              "backgroundSize": "cover",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                <p
                                className="mb2"
                >
<<<<<<< HEAD
                                Invalid date, undefined at foo
=======
                                Invalid date, foo: at foo
>>>>>>> Add EventDetailHero text
                </p>
                <h2
                                className=""
                >
                                foo
                </h2>
                <p
                                className="mt1 mb3"
                                dangerouslySetInnerHTML={
                                                Object {
                                                                "__html": "<p>foo</p>
                                                ",
                                                              }
                                }
                />
</div>,
              <div>
                <Button
                                className="inline-flex"
                                color="peach"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="RSVP"
                                onClick={[Function]}
                                shadow={false}
<<<<<<< HEAD
                                to="/events/undefined"
=======
                                to="/events/foo"
>>>>>>> Add EventDetailHero text
                                type="button"
                                variant="primary"
                />
</div>,
            ],
            "className": "col-12 md-col-6 flex flex-column justify-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="mb2"
>
<<<<<<< HEAD
                    Invalid date, undefined at foo
=======
                    Invalid date, foo: at foo
>>>>>>> Add EventDetailHero text
</p>,
                  <h2
                    className=""
>
                    foo
</h2>,
                  null,
                  <p
                    className="mt1 mb3"
                    dangerouslySetInnerHTML={
                                        Object {
                                                            "__html": "<p>foo</p>
                                        ",
                                                          }
                    }
/>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
<<<<<<< HEAD
                    "children": "Invalid date, undefined at foo",
                    "className": "mb2",
                  },
                  "ref": null,
                  "rendered": "Invalid date, undefined at foo",
=======
                    "children": "Invalid date, foo: at foo",
                    "className": "mb2",
                  },
                  "ref": null,
                  "rendered": "Invalid date, foo: at foo",
>>>>>>> Add EventDetailHero text
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "foo",
                    "className": "",
                  },
                  "ref": null,
                  "rendered": "foo",
                  "type": "h2",
                },
                null,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "mt1 mb3",
                    "dangerouslySetInnerHTML": Object {
                      "__html": "<p>foo</p>
",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Button
                  className="inline-flex"
                  color="peach"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label="RSVP"
                  onClick={[Function]}
                  shadow={false}
<<<<<<< HEAD
                  to="/events/undefined"
=======
                  to="/events/foo"
>>>>>>> Add EventDetailHero text
                  type="button"
                  variant="primary"
/>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "className": "inline-flex",
                  "color": "peach",
                  "disabled": false,
                  "fullWidth": false,
                  "hover": "shadow",
                  "label": "RSVP",
                  "onClick": [Function],
                  "shadow": false,
<<<<<<< HEAD
                  "to": "/events/undefined",
=======
                  "to": "/events/foo",
>>>>>>> Add EventDetailHero text
                  "type": "button",
                  "variant": "primary",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventCard
    active={false}
    event={
        Object {
            "blockCardText": "",
            "datesAndTimes": Array [
              Object {
                "Date": "",
                "Time": "",
                "uuid": "",
              },
            ],
            "eventType": "",
            "id": "",
            "image": "",
            "locationTitle": "",
            "title": "",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="col-12 md-col-6"
          style={
                    Object {
                              "background": "url(?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                              "backgroundSize": "cover",
                            }
          }
/>,
        <div
          className="col-12 md-col-6 flex flex-column justify-between"
>
          <div>
                    <p
                              className="mb2"
                    >
                              Invalid date, undefined at 
                    </p>
                    <h2
                              className=""
                    />
          </div>
          <div>
                    <Button
                              className="inline-flex"
                              color="peach"
                              disabled={false}
                              fullWidth={false}
                              hover="shadow"
                              label="RSVP"
                              onClick={[Function]}
                              shadow={false}
<<<<<<< HEAD
                              to="/events/undefined"
=======
                              to="/events/"
>>>>>>> Add EventDetailHero text
                              type="button"
                              variant="primary"
                    />
          </div>
</div>,
      ],
      "className": "transition-slide-up-large bg-white mb3 flex col-12 md-col-7",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "col-12 md-col-6",
          "style": Object {
            "background": "url(?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
            "backgroundSize": "cover",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              <p
                            className="mb2"
              >
                            Invalid date, undefined at 
              </p>
              <h2
                            className=""
              />
</div>,
            <div>
              <Button
                            className="inline-flex"
                            color="peach"
                            disabled={false}
                            fullWidth={false}
                            hover="shadow"
                            label="RSVP"
                            onClick={[Function]}
                            shadow={false}
<<<<<<< HEAD
                            to="/events/undefined"
=======
                            to="/events/"
>>>>>>> Add EventDetailHero text
                            type="button"
                            variant="primary"
              />
</div>,
          ],
          "className": "col-12 md-col-6 flex flex-column justify-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="mb2"
>
                  Invalid date, undefined at 
</p>,
                <h2
                  className=""
/>,
                null,
                null,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Invalid date, undefined at ",
                  "className": "mb2",
                },
                "ref": null,
                "rendered": "Invalid date, undefined at ",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                  "className": "",
                },
                "ref": null,
                "rendered": "",
                "type": "h2",
              },
              null,
              null,
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Button
                className="inline-flex"
                color="peach"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label="RSVP"
                onClick={[Function]}
                shadow={false}
<<<<<<< HEAD
                to="/events/undefined"
=======
                to="/events/"
>>>>>>> Add EventDetailHero text
                type="button"
                variant="primary"
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "inline-flex",
                "color": "peach",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "RSVP",
                "onClick": [Function],
                "shadow": false,
<<<<<<< HEAD
                "to": "/events/undefined",
=======
                "to": "/events/",
>>>>>>> Add EventDetailHero text
                "type": "button",
                "variant": "primary",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-12 md-col-6"
            style={
                        Object {
                                    "background": "url(?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                                    "backgroundSize": "cover",
                                  }
            }
/>,
          <div
            className="col-12 md-col-6 flex flex-column justify-between"
>
            <div>
                        <p
                                    className="mb2"
                        >
                                    Invalid date, undefined at 
                        </p>
                        <h2
                                    className=""
                        />
            </div>
            <div>
                        <Button
                                    className="inline-flex"
                                    color="peach"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="RSVP"
                                    onClick={[Function]}
                                    shadow={false}
<<<<<<< HEAD
                                    to="/events/undefined"
=======
                                    to="/events/"
>>>>>>> Add EventDetailHero text
                                    type="button"
                                    variant="primary"
                        />
            </div>
</div>,
        ],
        "className": "transition-slide-up-large bg-white mb3 flex col-12 md-col-7",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "col-12 md-col-6",
            "style": Object {
              "background": "url(?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
              "backgroundSize": "cover",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                <p
                                className="mb2"
                >
                                Invalid date, undefined at 
                </p>
                <h2
                                className=""
                />
</div>,
              <div>
                <Button
                                className="inline-flex"
                                color="peach"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="RSVP"
                                onClick={[Function]}
                                shadow={false}
<<<<<<< HEAD
                                to="/events/undefined"
=======
                                to="/events/"
>>>>>>> Add EventDetailHero text
                                type="button"
                                variant="primary"
                />
</div>,
            ],
            "className": "col-12 md-col-6 flex flex-column justify-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="mb2"
>
                    Invalid date, undefined at 
</p>,
                  <h2
                    className=""
/>,
                  null,
                  null,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Invalid date, undefined at ",
                    "className": "mb2",
                  },
                  "ref": null,
                  "rendered": "Invalid date, undefined at ",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "",
                    "className": "",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": "h2",
                },
                null,
                null,
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Button
                  className="inline-flex"
                  color="peach"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label="RSVP"
                  onClick={[Function]}
                  shadow={false}
<<<<<<< HEAD
                  to="/events/undefined"
=======
                  to="/events/"
>>>>>>> Add EventDetailHero text
                  type="button"
                  variant="primary"
/>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "className": "inline-flex",
                  "color": "peach",
                  "disabled": false,
                  "fullWidth": false,
                  "hover": "shadow",
                  "label": "RSVP",
                  "onClick": [Function],
                  "shadow": false,
<<<<<<< HEAD
                  "to": "/events/undefined",
=======
                  "to": "/events/",
>>>>>>> Add EventDetailHero text
                  "type": "button",
                  "variant": "primary",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
